AM_CPPFLAGS = -I$(top_buildir)/include -I$(top_srcdir)/include
AM_CFLAGS =

lib_LTLIBRARIES = libvsb.la

libvsb_la_LIBADD =
libvsb_la_LDFLAGS =

libvsb_la_SOURCES = \
	connection.h \
	connection_list.h \
	frame.h \
	frame_receiver.h \
	log.h \
	server.h \
	vsb.h \
	client.c \
	server.c \
	frame.c \
	frame_receiver.c \
	connection.c \
	connection_list.c
